<?xml version="1.0"?>
<package format="3">
  <name>leptrino_force_sensor</name>
  <version>0.0.1</version>
  <description>Leptrino force sensor ROS2 node without external serial library</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
